# kernel-sdf-cuda

./: .gitignore  CMakeLists.txt  README.md
data/test/: omega_linear_1973-10-31_2024-11-30_cz82_OSAP_M.parquet  omega_rbf_0.0058780160722749115_1973-10-31_2024-11-30_cz82_OSAP_M.parquet
logs/: 2026-06-13_daily_frontier.md  2026-06-14_daily_frontier.md
python/: bin_to_parquet.py  check_poly2.py  cz82.py  daily_oracle.py  diff_omega.py  prep.py  prep_daily.py  run_grid.py  validate_prep.py
reference/: ck_pca_cuda_v_aug25.py
reference/ckpca/: MANIFEST.in  README.md  example.py  setup.py
reference/ckpca/ckpca/: CKPCA.py  CKPCA_CUDA.py  helpers.py
src/: dump_prep.cpp  hello.cu  omega_grid.cu  omega_grid_tiled.cu  omega_grid_tiled_mp.cu  omega_linear.cu  omega_rbf.cu  omega_rbf_opt.cu  prep_loader.cpp  prep_loader.hpp
